@@ -85,7 +85,8 @@ cholmod_sparse *as_cholmod_sparse(SEXP x)
  * @param a matrix to be converted
  * @param dofree 0 - don't free a; > 0 cholmod_free a; < 0 Free a
  * @param uploT 0 - not triangular; > 0 upper triangular; < 0 lower
- * @param Rkind - vector type to store, e.g. REALSXP
+ * @param Rkind - vector type to store for a->xtype == CHOLMOD_REAL,
+ *                0 - REAL; 1 - LOGICAL
  * @param diag character string suitable for the diag slot of a
  *          triangular matrix (not accessed if uploT == 0).
  * @param dn either R_NilValue or an SEXP suitable for the Dimnames slot.
@@ -598,7 +599,7 @@ cholmod_factor *as_cholmod_factor(SEXP x)
 SEXP chm_factor_to_SEXP(cholmod_factor *f, int dofree)
 {
     SEXP ans;
-    int *type;
+    int *dims, *type;
     char *class = (char*) NULL;	/* -Wall */
 
     switch(f->xtype) {
@@ -614,6 +615,8 @@ SEXP chm_factor_to_SEXP(cholmod_factor *f, int dofree)
     ans = PROTECT(NEW_OBJECT(MAKE_CLASS(class)));
     if (f->minor < f->n)
 	error(_("CHOLMOD factorization was unsuccessful"));
+    dims = INTEGER(ALLOC_SLOT(ans, Matrix_DimSym, INTSXP, 2));
+    dims[0] = dims[1] = f->n;
 				/* copy component of known length */
     Memcpy(INTEGER(ALLOC_SLOT(ans, Matrix_permSym, INTSXP, f->n)),
 	   (int*)f->Perm, f->n);
